# OrangeJuice

./: .dockerignore  .env  .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  main.py  pyproject.toml  use-cases.md
.github/workflows/: python-app.yml
src/: container.py  main.py
src/app/: config.py  container.py
src/app/commits/: commits.py  group.py
src/app/embeddings/: embedding_function.py
src/app/files/: files.py  group.py
src/app/repos/: group.py  repos.py  responses.py
src/core/: container.py
src/core/commits/queries/: queries.py
src/core/files/queries/: models.py  queries.py
src/core/interfaces/: container.py  git_client.py  query_client.py  search_client.py
src/core/repos/: add_repo_operation.py  delete_repo_operation.py  errors.py
src/core/repos/operations/: add_repo_operation.py  delete_repo_operation.py  update_repo_operation.py
src/core/repos/queries/: queries.py
src/data/commits/: queries.py
src/data/repos/: queries.py
src/entities/: commits.py  repos.py  trees.py
src/entities/repos/: entities.py
src/libs/: container.py
src/libs/chromadb/: base.py  providers.py
src/libs/duckdb/: provider.py
src/libs/embeddings/: provider.py
src/libs/git/: providers.py  service.py
tests/core/repos/: test_delete_repo_operation.py
tests/core/repos/operations/: test_create_repo_operations.py  test_delete_repo_operation.py  test_update_repo_operation.py
