[project]
name = "orangejuice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "click>=8.2.1",
    "dependency-injector>=4.48.1",
    "duckdb>=1.3.2",
    "faiss-cpu>=1.11.0.post1",
    "fast-depends>=2.4.12",
    "gitpython>=3.1.44",
    "langchain>=0.3.26",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "textual>=4.0.0",
    "tiktoken>=0.9.0",
]
